<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:theme="@style/Theme.Dialog">
    <item
            app:showAsAction="ifRoom|withText"
            android:icon="@drawable/baseline_create_black_24dp"
            android:id="@+id/item_detail_menu_edit"
            android:title="@string/edit" />
    <item
            app:showAsAction="ifRoom|withText"
            android:icon="@drawable/baseline_send_black_24dp"
            android:id="@+id/item_detail_menu_send"
            android:title="@string/send" />
    <item
            app:showAsAction="ifRoom|withText"
            android:icon="@drawable/baseline_access_alarm_black_24dp"
            android:id="@+id/item_detail_menu_reminder"
            android:title="@string/reminder" />
    <item
            app:showAsAction="ifRoom|withText"
            android:icon="@drawable/baseline_delete_forever_black_18dp"
            android:id="@+id/item_detail_menu_delete"
            android:title="@string/excluir" />
</menu>