<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/verdana">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <!--<ImageButton
                android:id="@+id/action_undo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/undo"
                android:src="@drawable/undo"/>

        <ImageButton
                android:id="@+id/action_redo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/redo"
                android:src="@drawable/redo"/>-->

        <ImageButton
                android:id="@+id/action_bold"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/textBold"
                android:src="@drawable/bold"/>

        <ImageButton
                android:id="@+id/action_italic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/textItalic"
                android:src="@drawable/italic"/>

        <ImageButton
                android:id="@+id/action_subscript"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/subscript"
                android:src="@drawable/subscript"/>

        <ImageButton
                android:id="@+id/action_superscript"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/superscript"
                android:src="@drawable/superscript"/>

        <ImageButton
                android:id="@+id/action_strikethrough"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/strikethrough"
                android:src="@drawable/strikethrough"/>

        <ImageButton
                android:id="@+id/action_underline"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/underline"
                android:src="@drawable/underline"/>


        <ImageButton
                android:id="@+id/action_txt_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/txt_color"
                android:src="@drawable/txt_color"/>

        <ImageButton
                android:id="@+id/action_bg_color"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/bg_color"
                android:src="@drawable/bg_color"/>
        <ImageButton
                android:id="@+id/action_font_size"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/size"
                android:src="@drawable/baseline_format_size_white_18dp"/>


    </LinearLayout>

</HorizontalScrollView>