<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/verdana">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/action_heading1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading1"
                android:src="@drawable/h1"/>

        <ImageButton
                android:id="@+id/action_heading2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading2"
                android:src="@drawable/h2"/>

        <ImageButton
                android:id="@+id/action_heading3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading3"
                android:src="@drawable/h3"/>

        <ImageButton
                android:id="@+id/action_heading4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading4"
                android:src="@drawable/h4"/>

        <ImageButton
                android:id="@+id/action_heading5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading5"
                android:src="@drawable/h5"/>

        <ImageButton
                android:id="@+id/action_heading6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/heading6"
                android:src="@drawable/h6"/>

    </LinearLayout>

</HorizontalScrollView>