<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:background="@color/verdana">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageButton
                android:id="@+id/action_indent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/indent"
                android:src="@drawable/indent"/>

        <ImageButton
                android:id="@+id/action_outdent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/outdent"
                android:src="@drawable/outdent"/>

        <ImageButton
                android:id="@+id/action_align_left"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/align_left"
                android:src="@drawable/justify_left"/>

        <ImageButton
                android:id="@+id/action_align_center"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/align_center"
                android:src="@drawable/justify_center"/>

        <ImageButton
                android:id="@+id/action_align_right"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/align_right"
                android:src="@drawable/justify_right"/>
    </LinearLayout>

</HorizontalScrollView>